Fixed header navigation wrapping on smaller screens, Fixed admin nav cutting off and added darker border for active nav items, Fixed account page footer from stacking, fixed admin dash anchor link in header navigation

--- a/SRC/NTC_Lego/NTC_Lego/Client/Shared/MainLayout.razor.css
+++ b/SRC/NTC_Lego/NTC_Lego/Client/Shared/MainLayout.razor.css
@@ -35,6 +35,9 @@
 }
 
 .top-nav {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
     list-style-type: none;
 }
 
@@ -55,6 +58,7 @@ main {
 .sidebar {
     background-color: #fbfbfb;
     border-right: 1px solid #EDEDED;
+    overflow: hidden;
 }
 
 .top-row {
