--- a/SRC/NTC_Lego/NTC_Lego/Client/Shared/NavMenu.razor.css
+++ b/SRC/NTC_Lego/NTC_Lego/Client/Shared/NavMenu.razor.css
@@ -1,3 +1,10 @@
+.admin-sidebar {
+    position: sticky;
+    z-index: 2;
+    left: 0;
+    top: 0;
+}
+
 .navbar-toggler {
     background-color: rgba(255, 255, 255, 0.1);
 }
@@ -45,7 +52,7 @@
 .nav-item ::deep a.active {
     background-color: white;
     color: #000;
-    border: 1px solid #EDEDED;
+    border: 1px solid black;
 }
 
 .nav-item ::deep a:hover {
